[package]
name = "cyberwoodenfish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-files = "0.6.2"
tera = "1.17.1"
once_cell = "1.17.0"
serde = { version = "1", features = ["derive"] }
